Overflow fixed

--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ a {
 .all-container {
     flex-grow: 1;
     display: flex;
+    overflow: auto;
 }
 
 .sidebar {
@@ -52,6 +53,7 @@ a {
 
 .main-container {
     flex-grow: 1;
+    overflow: auto;
 }
 
 .no-shrink {
@@ -144,13 +146,6 @@ a {
     margin-left: 10px;
 }
 
-/* .circle {
-    border-radius: 50%;
-    width: 20px;
-    height: 20px;
-    padding: 10px;
-} */
-
 .sidebar hr {
     margin: 5px 0;
     width: 70%;
@@ -158,6 +153,7 @@ a {
 }
 
 .barra-upgrade {
+    z-index: 2;
     width: 100%;
     display: flex;
     height: 65px;
